Prototype Details Menu and Details popover

--- a/index.html
+++ b/index.html
@@ -6,25 +6,91 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <details class='dialog' open>
-    <summary><div class='test-large'><button>Open this dialog!</button></div></summary>
-    <details-dialog>
-      <form method="get">
-        <header>
-          This is a new modal dialog!
-          <button type="button" data-close-dialog>X</button>
-        </header>
-        <main>
-          <p>Captain, why are we out here chasing comets? The Federation's gone; the Borg is everywhere! I'll alert the crew. Ensign Babyface! Worf, It's better than music. It's jazz. I suggest you drop it, Mr. Data. When has justice ever been as simple as a rule book? I'd like to think that I haven't changed those things, sir. Then maybe you should consider this: if anything happens to them, Starfleet is going to want a full investigation. Travel time to the nearest starbase? This should be interesting. What? We're not at all alike! Commander William Riker of the Starship Enterprise. Computer, belay that order. Our neural pathways have become accustomed to your sensory input patterns. They were just sucked into space. Computer, lights up! Now, how the hell do we defeat an enemy that knows us better than we know ourselves?</p>
+  <header>
+    <h1>My Details Demo</h1>
 
-          <label for="name">Your Name:</label>
-          <input name="person" placeholder="Grace Hopper"></form>
-        </main>
-        <footer>
-          <button type="submit">Submit this form!</button>
-        </footer>
-      </form>
-    </details-dialog>
-  </details>
+    <nav>
+      <ul class='app-navigation'>
+        <li>Home</li>
+        <li>Agenda</li>
+        <li>Emergency Tasks</li>
+      </ul>
+
+      <details class='user-settings menu'>
+        <summary><img src="https://robohash.org/Robot tears taste like candy"></summary>
+        <details-menu role="menu">
+          <ul>
+            <li>Preferences</li>
+            <li>Notifications</li>
+            <li>Sign out</li>
+          </ul>
+
+          <ul>
+            <li>Robot Overlords (current)</li>
+            <li>Secret robot factory</li>
+            <li>Make a new account!</li>
+          </ul>
+        </details-menu>
+      </details>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Throw her in the brig.</h1>
+      <p>Son, as your lawyer, I declare y'all are in a 12-piece bucket o' trouble. But I done struck you a deal: Five hours of community service cleanin' up that ol' mess you caused. Large bet on myself in round one.</p>
+      <p>Would you censor the Venus de Venus just because you can see her spewers? Do a flip! <strong> I'm just glad my fat, ugly mama isn't alive to see this day.</strong> <em> Oh, I don't have time for this.</em> I have to go and buy a single piece of fruit with a coupon and then return it, making people wait behind me while I complain.</p>
+      <h2>Well, thanks to the Internet, I'm now bored with sex. Is there a place on the web that panders to my lust for violence?</h2>
+      <p>Tell her you just want to talk. It has nothing to do with mating. It's a T. It goes "tuh". Well I'da done better, but it's plum hard pleading a case while awaiting trial for that there incompetence. Guards! Bring me the forms I need to fill out to have her taken away!</p>
+      <ol>
+      <li>And so we say goodbye to our beloved pet, Nibbler, who's gone to a place where I, too, hope one day to go. The toilet.</li><li>This is the worst kind of discrimination: the kind against me!</li><li>Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages!</li>
+      </ol>
+
+    <h1>A panorama image</h1>
+
+    <figure>
+      <img src="https://picsum.photos/800/300/?random">
+      <figcaption>
+        <details class='dialog'>
+          <summary><button>Open this dialog!</button></summary>
+          <details-dialog>
+            <form method="get">
+              <header>
+                This is a new modal dialog!
+                <button type="button" data-close-dialog>X</button>
+              </header>
+              <main>
+                <p>Captain, why are we out here chasing comets? The Federation's gone; the Borg is everywhere! I'll alert the crew. Ensign Babyface! Worf, It's better than music. It's jazz. I suggest you drop it, Mr. Data. When has justice ever been as simple as a rule book? I'd like to think that I haven't changed those things, sir. Then maybe you should consider this: if anything happens to them, Starfleet is going to want a full investigation. Travel time to the nearest starbase? This should be interesting. What? We're not at all alike! Commander William Riker of the Starship Enterprise. Computer, belay that order. Our neural pathways have become accustomed to your sensory input patterns. They were just sucked into space. Computer, lights up! Now, how the hell do we defeat an enemy that knows us better than we know ourselves?</p>
+
+                <label for="name">Your Name:</label>
+                <input name="person" placeholder="Grace Hopper"></form>
+              </main>
+              <footer>
+                <button type="submit">Submit this form!</button>
+              </footer>
+            </form>
+          </details-dialog>
+        </details>
+      </figcaption>
+    </figure>
+
+    <h1>
+      Jeffness
+      <details class="jeff popover" open>
+        <summary>Details</summary>
+        <details-popover>
+          <h2>Current Cat Sweater Status</h2>
+          <img src="https://assets-cdn.shortlist.com/app/uploads/2017/10/12105925/how-jeff-goldblum-spends-every-second-of-every-day-2-crop-1507806040-1000x667.png">
+          <p>Hey, you know how I'm, like, always trying to save the planet? Here's my chance. God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. Must go faster. You really think you can fly that thing? Did he just throw my cat out of the window?</p>
+
+          <p>Eventually, you do plan to have dinosaurs on your dinosaur tour, right? You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager? So you two dig up, dig up dinosaurs? God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.</p>
+        </details-popover>
+      </details>
+    </h1>
+    <p>You really think you can fly that thing? Hey, you know how I'm, like, always trying to save the planet? Here's my chance. Remind me to thank John for a lovely weekend. Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry, and I'll give you something to cry about you little bastard!</p>
+    <p>God help us, we're in the hands of engineers. I was part of something special. Hey, you know how I'm, like, always trying to save the planet? Here's my chance. We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!</p>
+    <p>You know what? It is beets. I've crashed into a beet truck. Yes, Yes, without the oops! Just my luck, no ice. This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows. God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.</p>
+    <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! Must go faster... go, go, go, go, go! Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.</p>
+    <p>Must go faster... go, go, go, go, go! Do you have any idea how long it takes those cups to decompose. We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!</p>
+  </main>
 </body>
 </html>
