--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </ul>
 
       <details class='user-settings menu'>
-        <summary><img src="https://robohash.org/Robot tears taste like candy"></summary>
+        <summary><img src="profile.jpg"></summary>
         <details-menu role="menu">
           <ul>
             <li>Preferences</li>
@@ -36,10 +36,10 @@
   </header>
 
   <main>
-    <h1>Throw her in the brig.</h1>
+    <h1>Throw them in the brig.</h1>
       <p>Son, as your lawyer, I declare y'all are in a 12-piece bucket o' trouble. But I done struck you a deal: Five hours of community service cleanin' up that ol' mess you caused. Large bet on myself in round one.</p>
       <p>Would you censor the Venus de Venus just because you can see her spewers? Do a flip! <strong> I'm just glad my fat, ugly mama isn't alive to see this day.</strong> <em> Oh, I don't have time for this.</em> I have to go and buy a single piece of fruit with a coupon and then return it, making people wait behind me while I complain.</p>
-      <h2>Well, thanks to the Internet, I'm now bored with sex. Is there a place on the web that panders to my lust for violence?</h2>
+      <h2>Good News Everyone!</h2>
       <p>Tell her you just want to talk. It has nothing to do with mating. It's a T. It goes "tuh". Well I'da done better, but it's plum hard pleading a case while awaiting trial for that there incompetence. Guards! Bring me the forms I need to fill out to have her taken away!</p>
       <ol>
       <li>And so we say goodbye to our beloved pet, Nibbler, who's gone to a place where I, too, hope one day to go. The toilet.</li><li>This is the worst kind of discrimination: the kind against me!</li><li>Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages!</li>
@@ -75,10 +75,10 @@
 
     <h1>
       Jeffness
-      <details class="jeff popover" open>
+      <details class="jeff popover">
         <summary>Details</summary>
         <details-popover>
-          <h2>Current Cat Sweater Status</h2>
+          <h2>Current Sweater Status</h2>
           <img src="https://assets-cdn.shortlist.com/app/uploads/2017/10/12105925/how-jeff-goldblum-spends-every-second-of-every-day-2-crop-1507806040-1000x667.png">
           <p>Hey, you know how I'm, like, always trying to save the planet? Here's my chance. God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. Must go faster. You really think you can fly that thing? Did he just throw my cat out of the window?</p>
 
