Experimenting with "dynamically loaded" popovers

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title></title>
-  <!-- <script type="module" src="details-dialog-element.esm.js"></script> -->
+  <script type="module" src="details-dialog-element.esm.js"></script>
+  <script type="module" src="test.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -86,7 +87,14 @@
         </details-popover>
       </details>
     </h1>
-    <p>You really think you can fly that thing? Hey, you know how I'm, like, always trying to save the planet? Here's my chance. Remind me to thank John for a lovely weekend. Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry, and I'll give you something to cry about you little bastard!</p>
+    <p>
+      You really think you can fly that thing? Hey, you know how I'm, like, always trying to save the planet? Here's my chance. Remind me to thank John for a lovely weekend. Must go faster... go, go, go, go, go! My dad once told me, laugh and the world laughs with you, Cry, and I'll give you something to cry about you little bastard!
+    <p>
+    <details class="popover dynamically-loaded">
+      <summary>Details</summary>
+      <details-popover>
+      </details-popover>
+    </details>
     <p>God help us, we're in the hands of engineers. I was part of something special. Hey, you know how I'm, like, always trying to save the planet? Here's my chance. We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!</p>
     <p>You know what? It is beets. I've crashed into a beet truck. Yes, Yes, without the oops! Just my luck, no ice. This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows. God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs.</p>
     <p>We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! Must go faster... go, go, go, go, go! Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.</p>
